Fri Aug 15 09:22:12 2014  Eric Wong  <e@80x24.org>

	* vm_core.h (rb_thread_struct): reorder to pack
	* cont.c (rb_context_struct, rb_fiber_struct): ditto
	  On x86-64, these changes reduces:
	  rb_thread_struct to 1000 bytes (from 1016)
	  rb_context_struct to 1288 bytes (from 1312)
	  rb_fiber_struct to 2272 bytes (from 2304)

Fri Aug 15 09:06:31 2014  Eric Wong  <e@80x24.org>

	* thread_pthread.h: define RB_NATIVETHREAD_LOCK_INIT and
	  RB_NATIVETHREAD_COND_INIT macros

	* thread_pthread.c (native_mutex_lock, native_mutex_unlock,
	  native_mutex_trylock, native_mutex_initialize,
	  native_mutex_destroy, native_cond_wait):
	  use rb_nativethread_lock_t instead of pthread_mutex_t
	  [Feature #10134]

	* thread_pthread.c (native_mutex_debug): make argument type-agnostic
	  to avoid later cast.

	* thread_pthread.c (register_cached_thread_and_wait):
	  replace PTHREAD_COND_INITIALIZER with RB_NATIVETHREAD_COND_INIT,
	  use native_mutex_{lock,unlock}

	* thread_pthread.c (use_cached_thread):
	  use native_mutex_{lock,unlock}

	* thread_pthread.c (native_sleep):
	  use rb_nativethread_lock_t to match th->interrupt_lock,
	  use native_mutex_{lock,unlock}

	* thread_pthread.c (timer_thread_lock): use rb_nativethread_lock_t type

Fri Aug 15 08:10:29 2014  Eric Wong  <e@80x24.org>

	* cont.c (cont_mark): fix typo in unused path [ci skip]

Fri Aug 15 06:00:56 2014  Eric Wong  <e@80x24.org>

	* vm.c (rb_thread_mark): update comment about marking `me'
	  [ruby-core:64340] [ruby-core:64341]

Fri Aug 15 05:53:59 2014  Eric Wong  <e@80x24.org>

	* README.EXT: preliminary documentation for RB_GC_GUARD
	  [Bug #10100] [ruby-core:60741]

Thu Aug 14 00:26:19 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: separate WIN32OLE_RECORD src from
	  win32ole.c
	* ext/win32ole/win32ole.h: ditto.
	* ext/win32ole/win32ole_record.c: ditto.
	* ext/win32ole/win32ole_record.h: ditto.
	* ext/win32ole/depend: ditto.
